--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,7 +1,7 @@
 .Burger {
     width : 100%;
     height: 250px;
-    overflow: scoll;
+    overflow: auto;
     font-weight: bold;
     font-size: 1.2rem;
     text-align: center;
